[REFACTOR T-0004] changed to LocalDate and implemented its uses